// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HexGrid renders 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    clickHandler={[Function]}
    rows={
        Array [
            Array [
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 0,
                "meta": "Joseph",
                "title": "About Me",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#292929",
                "id": 1,
                "meta": "Certified",
                "title": "ReactJS",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#F0DB4F",
                "id": 2,
                "meta": "Favorite Language",
                "title": "JavaScript",
              },
            ],
            Array [
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "#5159BF",
                "fill": "#292929",
                "id": 3,
                "meta": "Framework",
                "title": "Redux",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 4,
                "meta": "Problem Solving",
                "title": "algorithms",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "hide": true,
                "id": 5,
                "meta": "My career",
                "title": "experience",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 6,
                "meta": "Code as a hobby",
                "title": "python",
              },
            ],
            Array [
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 7,
                "meta": "Value Creation",
                "title": "hackathon",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#C92F00",
                "hide": true,
                "id": 8,
                "meta": "Acknowledgments",
                "title": "awards",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "hide": true,
                "id": 9,
                "meta": "Life as a React Developer",
                "title": "currently",
              },
            ],
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Unknown
          clickHandler={[Function]}
          row={
                    Array [
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "background": "#193549",
                                "backgroundFill": "tomato",
                                "fill": "#273B7A",
                                "id": 0,
                                "meta": "Joseph",
                                "title": "About Me",
                              },
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "background": "#193549",
                                "backgroundFill": "tomato",
                                "fill": "#292929",
                                "id": 1,
                                "meta": "Certified",
                                "title": "ReactJS",
                              },
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "background": "#193549",
                                "backgroundFill": "tomato",
                                "fill": "#F0DB4F",
                                "id": 2,
                                "meta": "Favorite Language",
                                "title": "JavaScript",
                              },
                            ]
          }
/>,
        <Unknown
          clickHandler={[Function]}
          row={
                    Array [
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "background": "#193549",
                                "backgroundFill": "#5159BF",
                                "fill": "#292929",
                                "id": 3,
                                "meta": "Framework",
                                "title": "Redux",
                              },
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "background": "#193549",
                                "backgroundFill": "tomato",
                                "fill": "#273B7A",
                                "id": 4,
                                "meta": "Problem Solving",
                                "title": "algorithms",
                              },
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "background": "#193549",
                                "backgroundFill": "tomato",
                                "fill": "#273B7A",
                                "hide": true,
                                "id": 5,
                                "meta": "My career",
                                "title": "experience",
                              },
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "background": "#193549",
                                "backgroundFill": "tomato",
                                "fill": "#273B7A",
                                "id": 6,
                                "meta": "Code as a hobby",
                                "title": "python",
                              },
                            ]
          }
/>,
        <Unknown
          clickHandler={[Function]}
          row={
                    Array [
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "background": "#193549",
                                "backgroundFill": "tomato",
                                "fill": "#273B7A",
                                "id": 7,
                                "meta": "Value Creation",
                                "title": "hackathon",
                              },
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "backgroundFill": "tomato",
                                "fill": "#C92F00",
                                "hide": true,
                                "id": 8,
                                "meta": "Acknowledgments",
                                "title": "awards",
                              },
                              Object {
                                "Component": [Function],
                                "Content": [Function],
                                "backgroundFill": "tomato",
                                "fill": "#273B7A",
                                "hide": true,
                                "id": 9,
                                "meta": "Life as a React Developer",
                                "title": "currently",
                              },
                            ]
          }
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "GridRow0",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [Function],
          "row": Array [
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 0,
              "meta": "Joseph",
              "title": "About Me",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#292929",
              "id": 1,
              "meta": "Certified",
              "title": "ReactJS",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#F0DB4F",
              "id": 2,
              "meta": "Favorite Language",
              "title": "JavaScript",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "GridRow1",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [Function],
          "row": Array [
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "#5159BF",
              "fill": "#292929",
              "id": 3,
              "meta": "Framework",
              "title": "Redux",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 4,
              "meta": "Problem Solving",
              "title": "algorithms",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "hide": true,
              "id": 5,
              "meta": "My career",
              "title": "experience",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 6,
              "meta": "Code as a hobby",
              "title": "python",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "GridRow2",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [Function],
          "row": Array [
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 7,
              "meta": "Value Creation",
              "title": "hackathon",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#C92F00",
              "hide": true,
              "id": 8,
              "meta": "Acknowledgments",
              "title": "awards",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "hide": true,
              "id": 9,
              "meta": "Life as a React Developer",
              "title": "currently",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Unknown
            clickHandler={[Function]}
            row={
                        Array [
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "background": "#193549",
                                      "backgroundFill": "tomato",
                                      "fill": "#273B7A",
                                      "id": 0,
                                      "meta": "Joseph",
                                      "title": "About Me",
                                    },
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "background": "#193549",
                                      "backgroundFill": "tomato",
                                      "fill": "#292929",
                                      "id": 1,
                                      "meta": "Certified",
                                      "title": "ReactJS",
                                    },
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "background": "#193549",
                                      "backgroundFill": "tomato",
                                      "fill": "#F0DB4F",
                                      "id": 2,
                                      "meta": "Favorite Language",
                                      "title": "JavaScript",
                                    },
                                  ]
            }
/>,
          <Unknown
            clickHandler={[Function]}
            row={
                        Array [
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "background": "#193549",
                                      "backgroundFill": "#5159BF",
                                      "fill": "#292929",
                                      "id": 3,
                                      "meta": "Framework",
                                      "title": "Redux",
                                    },
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "background": "#193549",
                                      "backgroundFill": "tomato",
                                      "fill": "#273B7A",
                                      "id": 4,
                                      "meta": "Problem Solving",
                                      "title": "algorithms",
                                    },
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "background": "#193549",
                                      "backgroundFill": "tomato",
                                      "fill": "#273B7A",
                                      "hide": true,
                                      "id": 5,
                                      "meta": "My career",
                                      "title": "experience",
                                    },
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "background": "#193549",
                                      "backgroundFill": "tomato",
                                      "fill": "#273B7A",
                                      "id": 6,
                                      "meta": "Code as a hobby",
                                      "title": "python",
                                    },
                                  ]
            }
/>,
          <Unknown
            clickHandler={[Function]}
            row={
                        Array [
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "background": "#193549",
                                      "backgroundFill": "tomato",
                                      "fill": "#273B7A",
                                      "id": 7,
                                      "meta": "Value Creation",
                                      "title": "hackathon",
                                    },
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "backgroundFill": "tomato",
                                      "fill": "#C92F00",
                                      "hide": true,
                                      "id": 8,
                                      "meta": "Acknowledgments",
                                      "title": "awards",
                                    },
                                    Object {
                                      "Component": [Function],
                                      "Content": [Function],
                                      "backgroundFill": "tomato",
                                      "fill": "#273B7A",
                                      "hide": true,
                                      "id": 9,
                                      "meta": "Life as a React Developer",
                                      "title": "currently",
                                    },
                                  ]
            }
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "GridRow0",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [Function],
            "row": Array [
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 0,
                "meta": "Joseph",
                "title": "About Me",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#292929",
                "id": 1,
                "meta": "Certified",
                "title": "ReactJS",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#F0DB4F",
                "id": 2,
                "meta": "Favorite Language",
                "title": "JavaScript",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "GridRow1",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [Function],
            "row": Array [
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "#5159BF",
                "fill": "#292929",
                "id": 3,
                "meta": "Framework",
                "title": "Redux",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 4,
                "meta": "Problem Solving",
                "title": "algorithms",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "hide": true,
                "id": 5,
                "meta": "My career",
                "title": "experience",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 6,
                "meta": "Code as a hobby",
                "title": "python",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "GridRow2",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [Function],
            "row": Array [
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 7,
                "meta": "Value Creation",
                "title": "hackathon",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#C92F00",
                "hide": true,
                "id": 8,
                "meta": "Acknowledgments",
                "title": "awards",
              },
              Object {
                "Component": [Function],
                "Content": [Function],
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "hide": true,
                "id": 9,
                "meta": "Life as a React Developer",
                "title": "currently",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`HexGridColumn renders 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    clickHandler={[Function]}
    tile={
        Object {
            "Component": [Function],
            "Content": [Function],
            "backgroundFill": "#333",
            "fill": "#222",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <svg
        style={
                Object {
                        "alignItems": "center",
                        "display": "flex",
                        "height": "100px",
                        "justifyContent": "center",
                        "margin": "5px",
                        "width": "100px",
                      }
        }
>
        <Hexagon
                diagonal={100}
                flatTop={true}
                onClick={[Function]}
                style={
                        Object {
                                "fill": "#333",
                                "stroke": "none",
                              }
                }
        >
                <Component
                        fill="#222"
                        handler={[Function]}
                />
        </Hexagon>
</svg>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Hexagon
          diagonal={100}
          flatTop={true}
          onClick={[Function]}
          style={
                    Object {
                              "fill": "#333",
                              "stroke": "none",
                            }
          }
>
          <Component
                    fill="#222"
                    handler={[Function]}
          />
</Hexagon>,
        "style": Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100px",
          "justifyContent": "center",
          "margin": "5px",
          "width": "100px",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Component
            fill="#222"
            handler={[Function]}
/>,
          "diagonal": 100,
          "flatTop": true,
          "onClick": [Function],
          "style": Object {
            "fill": "#333",
            "stroke": "none",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "fill": "#222",
            "handler": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "svg",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <svg
          style={
                    Object {
                              "alignItems": "center",
                              "display": "flex",
                              "height": "100px",
                              "justifyContent": "center",
                              "margin": "5px",
                              "width": "100px",
                            }
          }
>
          <Hexagon
                    diagonal={100}
                    flatTop={true}
                    onClick={[Function]}
                    style={
                              Object {
                                        "fill": "#333",
                                        "stroke": "none",
                                      }
                    }
          >
                    <Component
                              fill="#222"
                              handler={[Function]}
                    />
          </Hexagon>
</svg>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Hexagon
            diagonal={100}
            flatTop={true}
            onClick={[Function]}
            style={
                        Object {
                                    "fill": "#333",
                                    "stroke": "none",
                                  }
            }
>
            <Component
                        fill="#222"
                        handler={[Function]}
            />
</Hexagon>,
          "style": Object {
            "alignItems": "center",
            "display": "flex",
            "height": "100px",
            "justifyContent": "center",
            "margin": "5px",
            "width": "100px",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Component
              fill="#222"
              handler={[Function]}
/>,
            "diagonal": 100,
            "flatTop": true,
            "onClick": [Function],
            "style": Object {
              "fill": "#333",
              "stroke": "none",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "fill": "#222",
              "handler": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": "svg",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`HexGridRow renders 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    clickHandler={[Function]}
    row={
        Array [
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 0,
              "meta": "Joseph",
              "title": "About Me",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#292929",
              "id": 1,
              "meta": "Certified",
              "title": "ReactJS",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#F0DB4F",
              "id": 2,
              "meta": "Favorite Language",
              "title": "JavaScript",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Unknown
          clickHandler={[Function]}
          tile={
                    Object {
                              "Component": [Function],
                              "Content": [Function],
                              "background": "#193549",
                              "backgroundFill": "tomato",
                              "fill": "#273B7A",
                              "id": 0,
                              "meta": "Joseph",
                              "title": "About Me",
                            }
          }
/>,
        <Unknown
          clickHandler={[Function]}
          tile={
                    Object {
                              "Component": [Function],
                              "Content": [Function],
                              "background": "#193549",
                              "backgroundFill": "tomato",
                              "fill": "#292929",
                              "id": 1,
                              "meta": "Certified",
                              "title": "ReactJS",
                            }
          }
/>,
        <Unknown
          clickHandler={[Function]}
          tile={
                    Object {
                              "Component": [Function],
                              "Content": [Function],
                              "background": "#193549",
                              "backgroundFill": "tomato",
                              "fill": "#F0DB4F",
                              "id": 2,
                              "meta": "Favorite Language",
                              "title": "JavaScript",
                            }
          }
/>,
      ],
      "style": Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [Function],
          "tile": Object {
            "Component": [Function],
            "Content": [Function],
            "background": "#193549",
            "backgroundFill": "tomato",
            "fill": "#273B7A",
            "id": 0,
            "meta": "Joseph",
            "title": "About Me",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [Function],
          "tile": Object {
            "Component": [Function],
            "Content": [Function],
            "background": "#193549",
            "backgroundFill": "tomato",
            "fill": "#292929",
            "id": 1,
            "meta": "Certified",
            "title": "ReactJS",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [Function],
          "tile": Object {
            "Component": [Function],
            "Content": [Function],
            "background": "#193549",
            "backgroundFill": "tomato",
            "fill": "#F0DB4F",
            "id": 2,
            "meta": "Favorite Language",
            "title": "JavaScript",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Unknown
            clickHandler={[Function]}
            tile={
                        Object {
                                    "Component": [Function],
                                    "Content": [Function],
                                    "background": "#193549",
                                    "backgroundFill": "tomato",
                                    "fill": "#273B7A",
                                    "id": 0,
                                    "meta": "Joseph",
                                    "title": "About Me",
                                  }
            }
/>,
          <Unknown
            clickHandler={[Function]}
            tile={
                        Object {
                                    "Component": [Function],
                                    "Content": [Function],
                                    "background": "#193549",
                                    "backgroundFill": "tomato",
                                    "fill": "#292929",
                                    "id": 1,
                                    "meta": "Certified",
                                    "title": "ReactJS",
                                  }
            }
/>,
          <Unknown
            clickHandler={[Function]}
            tile={
                        Object {
                                    "Component": [Function],
                                    "Content": [Function],
                                    "background": "#193549",
                                    "backgroundFill": "tomato",
                                    "fill": "#F0DB4F",
                                    "id": 2,
                                    "meta": "Favorite Language",
                                    "title": "JavaScript",
                                  }
            }
/>,
        ],
        "style": Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [Function],
            "tile": Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 0,
              "meta": "Joseph",
              "title": "About Me",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [Function],
            "tile": Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#292929",
              "id": 1,
              "meta": "Certified",
              "title": "ReactJS",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [Function],
            "tile": Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#F0DB4F",
              "id": 2,
              "meta": "Favorite Language",
              "title": "JavaScript",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
